// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-core example 1 1`] = `
<div
  className=""
  style={
    Object {
      "backgroundColor": "plum",
      "display": "flex",
      "flexDirection": "column",
      "padding": 32,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "fontFamily": "sans-serif",
        "fontSize": 24,
      }
    }
  >
    Hello, world!
  </span>
</div>
`;

exports[`wonder-blocks-core example 2 1`] = `
<div
  className=""
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className=""
    onClick={[Function]}
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    Click me!
  </div>
  <span
    aria-hidden={true}
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
      }
    }
  >
    This text is hidden from screen readers.
  </span>
</div>
`;

exports[`wonder-blocks-core example 3 1`] = `
<input
  className=""
  placeholder="hello, world"
  style={
    Object {
      "backgroundColor": "pink",
      "fontSize": 30,
    }
  }
  type="text"
/>
`;
